--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 34
     defaultConfig {
-        applicationId "com.example.project"
-        minSdkVersion 24
-        targetSdkVersion 29
+        applicationId "com.example.appstore"
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
     }
 }
 
@@ -32,4 +25,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation 'com.backblaze.b2:b2-sdk-core:3.1.0'
     implementation 'com.backblaze.b2:b2-sdk-okhttp:3.1.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
 }
